# proy_robotanica

./: .gitignore  README.md  index.html
opencv_tools/: package.xml  setup.cfg  setup.py
opencv_tools/opencv_tools/: basic_image_publisher.py  basic_image_subscriber.py
proy_robotanica/: CMakeLists.txt  package.xml
proy_robotanica_action/: package.xml  setup.cfg  setup.py
proy_robotanica_action/launch/: action_client.launch.py  action_server.launch.py
proy_robotanica_action/proy_robotanica_action/: action_client.py  action_server.py
proy_robotanica_bringup/: package.xml  setup.cfg  setup.py
proy_robotanica_bringup/launch/: proy_robotanica_bringup.launch.py
proy_robotanica_custom_interface/: CMakeLists.txt  package.xml
proy_robotanica_custom_interface/action/: Move.action
proy_robotanica_custom_interface/srv/: CircularMovementMsg.srv  MyMoveMsg.srv
proy_robotanica_deep_learning/: package.xml  setup.cfg  setup.py
proy_robotanica_deep_learning/proy_robotanica_deep_learning/: proy_robotanica_deep_learning.py
proy_robotanica_my_world/: CMakeLists.txt  package.xml
proy_robotanica_my_world/launch/: turtlebot3_my_world.launch.py
proy_robotanica_my_world/src/: turtlebot3_drive.cpp
proy_robotanica_nav2_system/: package.xml  setup.cfg  setup.py
proy_robotanica_provide_map/: package.xml  setup.cfg  setup.py
proy_robotanica_publisher/: package.xml  setup.cfg  setup.py
proy_robotanica_service/: package.xml  setup.cfg  setup.py
proy_robotanica_show_msg/: package.xml  setup.cfg  setup.py
proy_robotanica_slam/: package.xml  setup.cfg  setup.py
proy_robotanica_speech/: package.xml  setup.cfg  setup.py
proy_robotanica_subscriber/: package.xml  setup.cfg  setup.py
(+98 files in other folders)
